Fix README use of ISBN url

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,6 @@ knitr::opts_chunk$set(
 # `msos` R package
 
 Contains necessary Multivariate Analysis methods and data sets used
-in John Marden's Multivariate Statistics: Old School (2015) <ISBN:978-1456538835>.
+in John Marden's Multivariate Statistics: Old School (2015) [ISBN: 978-1456538835].
 This is also a companion package for the STAT 571: Multivariate Analysis course
 at the University of Illinois at Urbana-Champaign (UIUC). 
